test/expressions/noinit/recordHasClassField.good
recordHasClassField.chpl:9: error: unresolved call 'foo.noinit()'
recordHasClassField.chpl:9: note: because no functions named noinit found in scope
